feat: conectando banco de dados oracle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,40 @@
+# =====================================================
+# Configuração da Aplicação
+# =====================================================
 spring.application.name=ZenFlow
+server.port=8080
+
+# =====================================================
+# Configuração do Banco de Dados Oracle
+# =====================================================
+# URL do banco Oracle FIAP
+# Formato: jdbc:oracle:thin:@HOST:PORT:SID
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=rm560242
+spring.datasource.password=271005
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# =====================================================
+# Configuração JPA/Hibernate
+# =====================================================
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+# =====================================================
+# Configuração de Logging
+# =====================================================
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.example.ZenFlow=DEBUG
+
+# =====================================================
+# Configuração de Paginação
+# =====================================================
+spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.max-page-size=100
