--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,15 @@ logging.level.com.example.ZenFlow=DEBUG
 # =====================================================
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=100
+
+# =====================================================
+# Configuração Swagger/OpenAPI
+# =====================================================
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
+springdoc.paths-to-exclude=/error
