fix: corrigindo erros ao chamar endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,8 @@ logging.level.com.example.ZenFlow=DEBUG
 # =====================================================
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=100
+spring.data.web.pageable.one-indexed-parameters=false
+spring.data.web.sort.sort-parameter=sort
 
 # =====================================================
 # Configuração Swagger/OpenAPI
